# UCE-brain

./: README.md  pyproject.toml
gene_data/: human_gene_dict.json
notebooks/: visualize_embeddings_brain.ipynb
src/uce_brain/: __init__.py
src/uce_brain/data/: __init__.py  collator.py  dataset.py  sampler.py
src/uce_brain/model/: __init__.py  config.py  modeling.py
